@@ -1,0 +1,2 @@
+MD5 5bf140344a506c8a78dbf9defb2d379e onphp-0.2.5.tar.bz2 77692
+MD5 cb530756850b171f6bf8ed8d4087216c onphp-api-0.2.5.tar.bz2 2667584
