@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/onphp
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp/Attic/ChangeLog,v 1.2 2005/11/11 01:24:33 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp/Attic/ChangeLog,v 1.3 2005/11/16 10:24:54 voxus Exp $
+
+*onphp-0.2.5 (16 Nov 2005)
+
+  16 Nov 2005; Konstantin Arkhipov <voxus@gentoo.org> +onphp-0.2.5.ebuild,
+  -onphp-0.2.4.ebuild:
+  Version bump, now with API optional docs.
 
 *onphp-0.2.4 (11 Nov 2005)
 
